Initial Code Commit - Login Screen Added with API, - Dashboard Screen added with Categories list, Sort, Mark as Completed, Delete Task, Logout - Add to Do Task screen - Completed Task list screen

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,10 @@
 {
+  "compilerOptions": {
+    "jsx": "react",
+    "baseUrl": "./",
+    "paths": {
+      "@root/*": ["src/*/index", "src/*"]
+    }
+  },
   "extends": "@react-native/typescript-config"
 }
