--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-picker/picker": "^2.11.1",
+    "@react-native-vector-icons/material-design-icons": "^12.2.0",
     "@react-native/new-app-screen": "0.80.1",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
@@ -22,6 +23,7 @@
     "react-i18next": "^15.6.0",
     "react-native": "0.80.1",
     "react-native-gesture-handler": "2.26.0",
+    "react-native-paper": "^5.14.5",
     "react-native-popup-menu": "^0.18.0",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.11.1",
